--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "angular": "^1.4.3",
     "chai": "^3.1.0",
     "chai-http": "^1.0.0",
+    "css-loader": "^0.15.6",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "gulp-webpack": "^1.5.0",
     "jshint-stylish": "^2.0.1",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "style-loader": "^0.12.3"
   },
   "scripts": {
     "test": "gulp",
