--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
+    "lodash": "^3.10.1",
     "mongoose": "^4.0.7"
   },
   "devDependencies": {
     "angular": "^1.4.3",
+    "angular-mocks": "^1.4.3",
     "chai": "^3.1.0",
     "chai-http": "^1.0.0",
     "css-loader": "^0.15.6",
@@ -20,8 +22,13 @@
     "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "gulp-webpack": "^1.5.0",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.8",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
     "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17",
     "style-loader": "^0.12.3"
   },
   "scripts": {
